--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "employeecontrollerclient",
+  "login": "employeecontrollerclient",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "immutability-helper": "^3.0.0",
+    "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-modal": "^3.8.1",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "react-spinners": "^0.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
